Intento de arreglo de la capa de servicios

--- a/AppEcommerce/CapaServicios/Web.config
+++ b/AppEcommerce/CapaServicios/Web.config
@@ -15,6 +15,12 @@
     </system.web>
 
     <system.serviceModel>
+       <bindings>
+        <basicHttpBinding>
+            <binding maxBufferSize="2147483647" maxReceivedMessageSize="2147483647"/>
+        </basicHttpBinding>
+    </bindings>
+
         <behaviors>
             <serviceBehaviors>
                 <behavior name="">
