--- a/AppEcommerce/CapaServicios/Web.config
+++ b/AppEcommerce/CapaServicios/Web.config
@@ -15,11 +15,18 @@
     </system.web>
 
     <system.serviceModel>
-       <bindings>
-        <basicHttpBinding>
-            <binding maxBufferSize="2147483647" maxReceivedMessageSize="2147483647"/>
-        </basicHttpBinding>
-    </bindings>
+   <bindings>
+     <customBinding>
+       <binding name="customBinding0">
+         <binaryMessageEncoding />
+         <!-- Start change -->
+         <httpTransport maxReceivedMessageSize="2097152"
+                        maxBufferSize="2097152"
+                        maxBufferPoolSize="2097152"/>
+         <!-- Stop change -->
+       </binding>
+     </customBinding>
+   </bindings>
 
         <behaviors>
             <serviceBehaviors>
